fix safari issue on iphone w/ menu bar

--- a/src/components/Dashboard/style.css
+++ b/src/components/Dashboard/style.css
@@ -1,9 +1,10 @@
 .dashboard-container {
   display: flex;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   background: #EFEFEF;
-  max-height: 100vh;
+  /* max-height: 100vh; */
   overflow: hidden;
+  /* flex: 1; */
 }
 
 @media (prefers-color-scheme: dark) {
