--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,6 +1,7 @@
 .header {
   width: 100%;
   height: 55px;
+  min-height: 55px;
   background: #3AAB90;
   display: flex;
   justify-content: space-between;
